<resources>
    <string name="app_name">GP_AndroidCloud</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">登陆</string>
    <string name="dummy_content">效率云\n为提高工作效率而生</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>

    <string name="prompt_password_repeat">确认密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_invalid_password">密码输入太短</string>
    <string name="error_incorrect_password">用户名或密码错误，请重新输入</string>
    <string name="error_field_required">此字段必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_ad">AdActivity</string>

    <string name="action_settings">设置</string>
    <string name="action_upload">上传</string>
    <string name="title_activity_main">我的网盘</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sort">排序</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_register">注册</string>
    <string name="title_activity_register">注册</string>
    <string name="prompt_nickname">昵称</string>
    <string name="action_search">搜索</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="prompt_phone">手机号</string>
    <string name="prompt_user">用户名</string>
    <string name="prompt_nikName">真实姓名</string>
    <string name="connect_Error">网络连接超时 请检查网络连接</string>
    <string name="connect_Success">网络连接正常</string>
    <string name="connect_user_error">用户身份已过期,请重新登陆</string>
    <string name="connect_user_success">登陆成功</string>
    <string name="rationale_photo_picker">我们需要获取读取您照片和摄像头的权限</string>
    <string name="title_activity_tran_sport">文件传输</string>
    <string name="title_home">上传列表</string>
    <string name="title_dashboard">下载列表</string>
    <string name="title_notifications">已完成</string>
    <string name="title_activity_file_tran_sport">文件传输</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_file_operation">文件操作</string>


</resources>
